# sajson

./: CMakeLists.txt  README.md  SConstruct
benchmark/: CMakeLists.txt  benchmark.cpp
doc/: doxygen.config
example/: CMakeLists.txt  dump.cpp  main.cpp
include/: sajson.h  sajson_dump.h
testdata/: large.json.xz
tests/: CMakeLists.txt  test.cpp
